# geom

./: CMakeLists.txt  CTestTestfileInstall.cmake  CTestTestfileInstall.cmake.in  GEOM_version.h.in  INSTALL  Makefile.am  Makefile.in  README  SalomeGEOMConfig.cmake.in  build_cmake  build_cmake.bat  build_configure  clean_configure  configure.ac  configure.in.base
doc/docutils/: CMakeLists.txt  Makefile.am  conf.py  conf.py.in  docapi.rst  index.rst  overview.rst
doc/salome/: CMakeLists.txt  GEOM_index.html  GEOM_index_v3.1.0.html  Makefile.am  Makefile.in
idl/: AdvancedGEOM.idl  BREPPlugin.idl  CMakeLists.txt  GEOM_Gen.idl  GEOM_Shape.idl  GEOM_Superv.idl  IGESPlugin.idl  Makefile.am  Makefile.in  STEPPlugin.idl  STLPlugin.idl  VTKPlugin.idl  XAOPlugin.idl
resources/: AdvancedGEOM.xml  BREPPlugin.xml  CMakeLists.txt  GEOMActions.xml  GEOMCatalog.xml  GEOMCatalog.xml.in  GEOMDS_Resources  GEOM_en.xml  GEOM_fr.xml  Geometry_en.xml  Geometry_fr.xml  IGESPlugin.xml  ImportExport  Makefile.am  Plugin  Plugin.in  STEPPlugin.xml  STLPlugin.xml  SalomeApp.xml  SalomeApp.xml.in  ShHealing  VTKPlugin.xml  XAOPlugin.xml  action_assets.json
src/: CMakeLists.txt  Makefile.am  Makefile.in  diffs  src.pro
src/ARCHIMEDE/: ARCHIMEDE.pro  Archimede_VolumeSection.cxx  Archimede_VolumeSection.hxx  CMakeLists.txt  Makefile.am  Makefile.in
src/AdvancedEngine/: AdvancedEngine.cxx  AdvancedEngine.hxx  AdvancedEngine_DividedDiskDriver.cxx  AdvancedEngine_DividedDiskDriver.hxx  AdvancedEngine_IDividedDisk.hxx  AdvancedEngine_IOperations.cxx  AdvancedEngine_IOperations.hxx  AdvancedEngine_IOperations_i.cc  AdvancedEngine_IOperations_i.hh  AdvancedEngine_IPipeTShape.hxx  AdvancedEngine_ISmoothingSurface.hxx  AdvancedEngine_OperationsCreator.cc  AdvancedEngine_OperationsCreator.cxx  AdvancedEngine_OperationsCreator.hh  AdvancedEngine_OperationsCreator.hxx  AdvancedEngine_PipeTShapeDriver.cxx  AdvancedEngine_PipeTShapeDriver.hxx  AdvancedEngine_SmoothingSurfaceDriver.cxx  AdvancedEngine_SmoothingSurfaceDriver.hxx  AdvancedEngine_Types.hxx  CMakeLists.txt  GEOMImpl_DividedDiskDriver.cxx  GEOMImpl_DividedDiskDriver.hxx  GEOMImpl_IAdvancedOperations.cxx  GEOMImpl_IAdvancedOperations.hxx  GEOMImpl_IDividedDisk.hxx  GEOMImpl_IPipeTShape.hxx  GEOMImpl_ISmoothingSurface.hxx  GEOMImpl_PipeTShapeDriver.cxx  GEOMImpl_PipeTShapeDriver.hxx  GEOMImpl_SmoothingSurfaceDriver.cxx  GEOMImpl_SmoothingSurfaceDriver.hxx  GEOM_AdvancedEngine.hxx  GEOM_IAdvancedOperations_i.cc  GEOM_IAdvancedOperations_i.hh  Makefile.am
src/AdvancedGUI/: AdvancedGEOM_msg_en.ts  AdvancedGEOM_msg_ja.ts  AdvancedGUI.cxx  AdvancedGUI.h  AdvancedGUI_DividedCylinderDlg.cxx  AdvancedGUI_DividedCylinderDlg.h  AdvancedGUI_DividedDiskDlg.cxx  AdvancedGUI_DividedDiskDlg.h  AdvancedGUI_PipeTShapeDlg.cxx  AdvancedGUI_PipeTShapeDlg.h  AdvancedGUI_SmoothingSurfaceDlg.cxx  AdvancedGUI_SmoothingSurfaceDlg.h  AdvancedGUI_images.ts  AdvancedGUI_msg_en.ts  AdvancedGUI_msg_fr.ts  AdvancedGUI_msg_ja.ts  CMakeLists.txt  Makefile.am
src/BREPExport/: BREPExport.cxx  BREPExport.pro  CMakeLists.txt  Makefile.am  Makefile.in
src/BREPImport/: BREPImport.cxx  BREPImport.pro  CMakeLists.txt  Makefile.am  Makefile.in
src/BREPPlugin/: BREPPlugin_Engine.cxx  BREPPlugin_Engine.hxx  BREPPlugin_ExportDriver.cxx  BREPPlugin_ExportDriver.hxx  BREPPlugin_GUI.cxx  BREPPlugin_GUI.h  BREPPlugin_IECallBack.cxx  BREPPlugin_IECallBack.hxx  BREPPlugin_IExport.hxx  BREPPlugin_IImport.hxx  BREPPlugin_IOperations.cxx  BREPPlugin_IOperations.hxx  BREPPlugin_IOperations_i.cc  BREPPlugin_IOperations_i.hh  BREPPlugin_ImportDriver.cxx  BREPPlugin_ImportDriver.hxx  BREPPlugin_OperationsCreator.cxx  BREPPlugin_OperationsCreator.hxx  BREPPlugin_msg_en.ts  BREPPlugin_msg_fr.ts  BREPPlugin_msg_ja.ts  CMakeLists.txt
src/BasicGUI/: BasicGUI.cxx  BasicGUI.h  BasicGUI.pro  BasicGUI_ArcDlg.cxx  BasicGUI_ArcDlg.h  BasicGUI_CircleDlg.cxx  BasicGUI_CircleDlg.h  BasicGUI_CurveDlg.cxx  BasicGUI_CurveDlg.h  BasicGUI_EllipseDlg.cxx  BasicGUI_EllipseDlg.h  BasicGUI_LineDlg.cxx  BasicGUI_LineDlg.h  BasicGUI_MarkerDlg.cxx  BasicGUI_MarkerDlg.h  BasicGUI_ParamCurveWidget.cxx  BasicGUI_ParamCurveWidget.h  BasicGUI_PlaneDlg.cxx  BasicGUI_PlaneDlg.h  BasicGUI_PointDlg.cxx  BasicGUI_PointDlg.h  BasicGUI_VectorDlg.cxx  BasicGUI_VectorDlg.h  BasicGUI_WorkingPlaneDlg.cxx  BasicGUI_WorkingPlaneDlg.h  CMakeLists.txt  GEOM_BasicGUI.hxx  Makefile.am  Makefile.in
src/BlockFix/: BlockFix.cxx  BlockFix.hxx  BlockFix_BlockFixAPI.cxx  BlockFix_BlockFixAPI.hxx  BlockFix_CheckTool.cxx  BlockFix_CheckTool.hxx  BlockFix_PeriodicSurfaceModifier.cxx  BlockFix_PeriodicSurfaceModifier.hxx  BlockFix_SphereSpaceModifier.cxx  BlockFix_SphereSpaceModifier.hxx  BlockFix_UnionEdges.cxx  BlockFix_UnionEdges.hxx  BlockFix_UnionFaces.cxx  BlockFix_UnionFaces.hxx  CMakeLists.txt  Makefile.am
src/BlocksGUI/: BlocksGUI.cxx  BlocksGUI.h  BlocksGUI_BlockDlg.cxx  BlocksGUI_BlockDlg.h  BlocksGUI_ExplodeDlg.cxx  BlocksGUI_ExplodeDlg.h  BlocksGUI_PropagateDlg.cxx  BlocksGUI_PropagateDlg.h  BlocksGUI_QuadFaceDlg.cxx  BlocksGUI_QuadFaceDlg.h  BlocksGUI_TrsfDlg.cxx  BlocksGUI_TrsfDlg.h  CMakeLists.txt  GEOM_BlocksGUI.hxx  Makefile.am  Makefile.in
src/BooleanGUI/: BooleanGUI.cxx  BooleanGUI.h  BooleanGUI.pro  BooleanGUI_CommonDlg.cxx  BooleanGUI_CommonDlg.h  BooleanGUI_CutDlg.cxx  BooleanGUI_CutDlg.h  BooleanGUI_Dialog.cxx  BooleanGUI_Dialog.h  BooleanGUI_FuseDlg.cxx  BooleanGUI_FuseDlg.h  BooleanGUI_SectionDlg.cxx  BooleanGUI_SectionDlg.h  CMakeLists.txt  Makefile.am  Makefile.in
src/BuildGUI/: BuildGUI.cxx  BuildGUI.h  BuildGUI.pro  BuildGUI_CompoundDlg.cxx  BuildGUI_CompoundDlg.h  BuildGUI_EdgeDlg.cxx  BuildGUI_EdgeDlg.h  BuildGUI_FaceDlg.cxx  BuildGUI_FaceDlg.h  BuildGUI_ShellDlg.cxx  BuildGUI_ShellDlg.h  (+8 more)
test/: 0README  CMakeLists.txt  CTestTestfileInstall.cmake  test_CR.py  test_WrappedFace.py  test_boolean_fuzzy.py  test_conformity.py  test_helper.py  test_kind_of_shape.py  test_patch_face_01.py  test_perf_01.py  test_point_cloud_on_face.py  test_proximity_edge_edge.py  test_proximity_face_face.py  test_wire_modes.py  tests.set
(+3643 files in other folders)
